--- a/public/game.html
+++ b/public/game.html
@@ -65,6 +65,10 @@
             color: white;
             z-index: 1000;
         }
+        #successMessage img {
+            width: 500px; /* Neue Breite für das GIF */
+            height: auto;
+        }
     </style>
 </head>
 
