--- a/public/game.html
+++ b/public/game.html
@@ -79,7 +79,7 @@
 </div>
 <!-- Success Message -->
 <div id="successMessage">
-    <img src="suc.gif" alt="Success">
+    <img src="/success-gif" alt="Success">
 </div>
 <!-- Canvas and controls for game -->
 <canvas id="graphCanvas">
