--- a/public/game.html
+++ b/public/game.html
@@ -110,8 +110,8 @@
     loadWasm();
 </script>
 <!-- Then load our JavaScript files -->
-<script src="js/graph.js"></script>
-<script src="js/autoSolver.js"></script>
+<script src="/js/graph.js"></script>
+<script src="/js/autoSolver.js"></script>
 </body>
 
 </html>
