--- a/public/game.html
+++ b/public/game.html
@@ -99,8 +99,7 @@
 <!-- Add audio elements for the sounds -->
 <audio id="levelSound" src="flixel.mp3">
 </audio>
-<audio id="suckSound" src="gam2.mp3">
-</audio>
+<audio id="suckSound" src="/gam2.mp3"></audio>
 <!-- Load WASM first -->
 <script type="module">
     import init from './js/pkg/catalan.js';
