--- a/public/main.html
+++ b/public/main.html
@@ -53,7 +53,7 @@
 <div id="particles-js">
 </div>
 <div id="overlay" style="text-align: center; font-family: Arial, sans-serif; color: white;">
-    <div style="font-size: 40px; color: red; font-family: 'Sixtyfour';">
+    <div style="font-size: 40px; color: red; font-family: 'Sixtyfour',serif;">
         CATALAN PRO
     </div>
     <div style="font-size: 18px; color: lightgray;">
