--- a/public/game.html
+++ b/public/game.html
@@ -28,8 +28,8 @@
 <script type="module" src="js/solver/Vertex.js"></script>
 <script type="module" src="js/solver/Move.js"></script>
 <script type="module" src="js/solver/Graph.js"></script>
-<script type="module" src="js/solver/CatalanError.js"></script>
 <script type="module" src="js/solver/Catalan.js"></script>
+<script type="module" src="js/solver/CatalanSolver.js"></script>
 <script type="module" src="js/game.js"></script>
 </body>
 </html>
