--- a/public/main.html
+++ b/public/main.html
@@ -3,6 +3,7 @@
 <head>
     <link href="https://fonts.googleapis.com/css2?family=Sixtyfour&amp;display=swap" rel="stylesheet" />
     <meta charset="utf-8" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <title>Catalan Solver</title>
     <link rel="stylesheet" href="css/main.css">
     <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
