--- a/public/game.html
+++ b/public/game.html
@@ -9,7 +9,7 @@
 <!-- Display current level -->
 <div id="currentLevelDisplay">Level: Loading...</div>
 <!-- Success Message -->
-<div id="successMessage">SUCCESS!</div>
+<div id="successMessage"><img src="assets/images/success.gif" alt="Success" style="display: none;"></div>
 <!-- Canvas and controls for game -->
 <canvas id="graphCanvas"></canvas>
 <div id="controls">
