--- a/public/main.html
+++ b/public/main.html
@@ -17,8 +17,10 @@
     <div style="font-size: 18px; color: lightgray;">Faculty of Engineering, Bielefeld University</div>
     <div style="height: 20px;"></div>
     <!-- Empty line -->
-    <div style="font-size: 18px; color: lightgray;">Daniel Merkle</div>
+    <div style="font-size: 18px; color: lightgray;">created by Daniel Merkle</div>
     <div style="font-size: 18px; color: lightgray;">Algorithmic Cheminformatics</div>
+    <!-- Empty line -->
+    <div style="font-size: 18px; color: lightgray;">solver added by Christoph Alberts</div>
     <div style="margin-top: 20px;"><button id="startButton" style="font-size: 24px; padding: 10px 20px;">START</button></div>
 </div>
 <script src="js/main.js"></script>
